--- a/src/components/person/person.css
+++ b/src/components/person/person.css
@@ -31,7 +31,7 @@
   align-items: center;
   justify-content: center;
 
-  font-family: League Gothic, Impact, sans-serif !important;
+  font-family: Roboto, Impact, sans-serif !important;
   font-size: 28px !important;
   font-weight: 700;
   color: #333 !important;
