--- a/src/public/index.pug
+++ b/src/public/index.pug
@@ -3,6 +3,6 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    title Presentation Starter Kit | Object Partners, Inc.
+    title Pro-Bono Time-Keeping Project
   body
     div#slide-root
